// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component Title renders 1`] = `
<div>
  <h1
    class="gds-typography ellipsis align-edit"
    title="PREFIX"
  >
    PREFIX
  </h1>
  <span
    style="display: inline-flex; margin: auto; overflow: hidden;"
  >
    <span
      class="title-edit-hidden"
    >
      TITLE
    </span>
    <input
      autocomplete="off"
      class="title-edit"
      placeholder="PLACEHOLDED"
      style="display: flex; width: 0px; margin: auto;"
      type="text"
      value="TITLE"
    />
  </span>
  <div>
    <div
      class="gds-tooltip bottom"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        TOOLTIP
      </div>
    </div>
  </div>
  <h1
    class="gds-typography ellipsis align-edit"
  >
    - 
    ENTITYID
  </h1>
  <h1
    class="gds-typography ellipsis align-edit"
    title="SUFFIX"
  >
    SUFFIX
  </h1>
</div>
`;

exports[`Title Component Title renders and blurs on enter 1`] = `
<div>
  <span
    style="display: inline-flex; margin: auto; overflow: hidden;"
  >
    <span
      class="title-edit-hidden"
    >
      ABCDE
    </span>
    <input
      autocomplete="off"
      class="title-edit"
      data-testid="DATA-TEST-ID"
      style="display: flex; width: 0px; margin: auto;"
      type="text"
      value="ABCDE"
    />
  </span>
  <div>
    <div
      class="gds-tooltip bottom"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        Rename
      </div>
    </div>
  </div>
</div>
`;

exports[`Title Component Title renders and blurs on tab 1`] = `
<div>
  <span
    style="display: inline-flex; margin: auto; overflow: hidden;"
  >
    <span
      class="title-edit-hidden"
    >
      ABCDE
    </span>
    <input
      autocomplete="off"
      class="title-edit"
      data-testid="DATA-TEST-ID"
      style="display: flex; width: 0px; margin: auto;"
      type="text"
      value="ABCDE"
    />
  </span>
  <div>
    <div
      class="gds-tooltip bottom"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        Rename
      </div>
    </div>
  </div>
</div>
`;

exports[`Title Component Title renders and handles changes 1`] = `
<div>
  <span
    style="display: inline-flex; margin: auto; overflow: hidden;"
  >
    <span
      class="title-edit-hidden"
    >
      ABCDE
    </span>
    <input
      autocomplete="off"
      class="title-edit"
      data-testid="DATA-TEST-ID"
      style="display: flex; width: 0px; margin: auto;"
      type="text"
      value="ABCDE"
    />
  </span>
  <div>
    <div
      class="gds-tooltip bottom"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        Rename
      </div>
    </div>
  </div>
</div>
`;

exports[`Title Component Title renders not editable 1`] = `
<div>
  <span
    class="title-edit-hidden"
  >
    TITLE
  </span>
  <input
    autocomplete="off"
    class="title-edit"
    data-testid="DATA-TEST-ID"
    readonly=""
    style="display: flex; width: 0px; margin: auto;"
    type="text"
    value="TITLE"
  />
</div>
`;

exports[`Title Component Title renders restores title when too short 1`] = `
<div>
  <span
    style="display: inline-flex; margin: auto; overflow: hidden;"
  >
    <span
      class="title-edit-hidden"
    >
      TITLE
    </span>
    <input
      autocomplete="off"
      class="title-edit"
      data-testid="DATA-TEST-ID"
      style="display: flex; width: 0px; margin: auto;"
      type="text"
      value="TITLE"
    />
  </span>
  <div>
    <div
      class="gds-tooltip bottom"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        Rename
      </div>
    </div>
  </div>
</div>
`;
